--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
     <link rel="stylesheet" href="style.css"></link>
     <script defer src="app.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-blue-400">Hello world</h1>
-    <h4 id="counter"></h4>
-    <button onclick="add()">Add</button>
+    <header class="topBar">
+        <a href="./index.html">Home</a>
+        <a href="./settings.html">Settings</a>
+    </header>
 </body>
 </html>
