--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 
     <link rel="stylesheet" href="style.css"></link>
     <script defer src="app.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="topBar">
-        <a href="./index.html">Home</a>
-        <a href="./settings.html">Settings</a>
+        <a href="./index">Home</a>
+        <a href="./settings">Settings</a>
     </header>
 </body>
 </html>
